selfhost/tests/neg/retmismatch.ail
// EXPECT: returning str but function returns i64
fn f() -> i64 { rt "hi" }
println(f())
